<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>Orion-Server</artifactId>

    <packaging>jar</packaging>

    <version>0.1-ALPHA</version>

    <parent>
        <groupId>Orion</groupId>
        <artifactId>Orion-Emulator</artifactId>
        <version>0.1-ALPHA</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>Orion</groupId>
            <artifactId>Orion-API</artifactId>
            <version>0.1-ALPHA</version>
        </dependency>

        <dependency>
            <groupId>Orion</groupId>
            <artifactId>Orion-Storage</artifactId>
            <version>0.1-ALPHA</version>
        </dependency>

        <dependency>
            <groupId>Orion</groupId>
            <artifactId>Orion-Networking</artifactId>
            <version>0.1-ALPHA</version>
        </dependency>

        <dependency>
            <groupId>Orion</groupId>
            <artifactId>Orion-Protocol</artifactId>
            <version>0.1-ALPHA</version>
        </dependency>

        <dependency>
            <groupId>Orion</groupId>
            <artifactId>Orion-Writer</artifactId>
            <version>0.1-ALPHA</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/bin/lib</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <outputDirectory>${project.build.directory}/bin</outputDirectory>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addClasspath>true</addClasspath>
                            <mainClass>Orion.Bootstrap</mainClass>
                            <useUniqueVersions>false</useUniqueVersions>
                            <classpathPrefix>lib/</classpathPrefix>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/main/resources</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>Orion-Server/src/main/resources</directory>
                <includes>
                    <include>*.*</include>
                </includes>
            </resource>
        </resources>
    </build>

</project>